# 111

./: .gitignore  README.md  build-rust.bat  build-tauri.bat  check-eventlog.ps1  index.html  memo-design.md  package-lock.json  package.json  package.json.bak  reinstall-electron.bat  start-electron.bat  test-app.ps1  tsconfig.node.json  vite.config.ts  vite.preload.config.ts
.github/workflows/: build.yml
electron/: cet-questions.ts  dictionary-data.ts  generate_cet_questions.py  main.ts  preload.ts  sql.d.ts  tsconfig.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Layout.tsx
src/pages/: DictionaryPage.tsx  HomePage.tsx  LearningPlanPage.tsx  LiteratureImportPage.tsx  MistakesPage.tsx  QuizPage.tsx  ReviewPage.tsx  SettingsPage.tsx  WordsPage.tsx
src/services/: ai.ts  tauriApi.ts
src/types/: index.ts
